<resources>
    <string name="app_name">Podo Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_product">홈</string>
    <string name="bottom_navigation_article">동네생활</string>
    <string name="bottom_navigation_chat_room_list">채팅</string>
    <string name="bottom_navigation_my_page">나의 당근</string>
    <string name="appbar_product_category_fragment">관심 카테고리 설정</string>
    <string name="appbar_inbox_fragment">알림</string>
    <string name="add">add</string>
    <string name="image">image</string>
    <string name="product_main_image">product_main_image</string>
    <string name="heart">heart</string>
    <string name="product_name_long">예시 문구입니다. 두 줄이 넘어가면 자동으로 줄바꿈이 되나요?</string>
    <string name="city_name">관악구 포도동</string>
    <string name="sold_out">거래완료</string>
    <string name="selling">판매중</string>
    <string name="hidden">숨김</string>
    <string name="price_placeholder">10,000원</string>
    <string name="product_category_title">홈 화면에서 보고 싶지 않은 카테고리는\n체크를 해제하세요.</string>
    <string name="product_category_noti">최소 1개 이상 선택되어 있어야 합니다.</string>
    <string name="chip_digital_text">디지털/가전</string>
    <string name="chip_furniture_text">가구/인테리어</string>
    <string name="chip_for_child_text">유아동/유아도서</string>
    <string name="chip_food_text">생활/가공식품</string>
    <string name="chip_sport_text">스포츠/레저</string>
    <string name="chip_female_text">여성잡화</string>
    <string name="chip_female_fashion_text">여성의류</string>
    <string name="chip_male_fashion_text">남성패션/잡화</string>
    <string name="chip_game_text">게임/취미</string>
    <string name="chip_beauty_text">뷰티/미용</string>
    <string name="chip_for_pet_text">반려동물용품</string>
    <string name="chip_book_text">도서/티켓/음반</string>
    <string name="chip_plants_text">식물</string>
    <string name="chip_extra_text">기타 중고물품</string>
    <string name="chip_buy_text">삽니다</string>
    <string name="no_alert">알림이 없어요.</string>
    <string name="profile_actionbar_title">프로필</string>
    <string name="profile_manner">매너온도</string>
    <string name="profile_retransaction_hope_rate">재거래희망률 <b>-%</b></string>
    <string name="profile_retransaction_hope_rate_not_enough">표시될 만큼 충분히 거래하지 않았어요.</string>
    <string name="profile_response_rate">응답률 <b>-%</b></string>
    <string name="profile_response_rate_not_enough">표시될 만큼 충분히 채팅하지 않았어요.</string>
    <string name="profile_city_certification">xx동 <b>-회</b> 인증</string>
    <string name="profile_created_at_modified_at">yyyy년 mm월 dd일 가입(최근 -일 이내 활동)</string>
    <string name="profile_sale_product">판매상품 -개</string>
    <string name="profile_manner_evaluation">받은 매너 평가</string>
    <string name="profile_transaction_review">받은 거래 후기</string>
    <string name="appbar_chat_room_list_fragment">채팅</string>
    <string name="waiting_input_message">메세지를 입력하세요.</string>
    <string name="example_user_name">홍길동</string>
    <string name="example_chatting">채팅 예시입니다.</string>
    <string name="example_temperature">36.5도</string>
    <string name="example_response_time">보통 10분 이내 응답</string>
    <string name="example_product_name">국산 포도 팝니다.</string>
    <string name="example_product_price">20,000원</string>
    <string name="appbar_my_page_fragment">나의 당근</string>
    <string name="appbar_setting_fragment">설정</string>
    <string name="view_profile">프로필 보기</string>
    <string name="sell_list_icon">판매내역</string>
    <string name="buy_list_icon">구매내역</string>
    <string name="like_list_icon">관심목록</string>
    <string name="set_current_place">내 동네 설정</string>
    <string name="my_page_item_icon">Icon of the item of MyPage.</string>
    <string name="key_word_alert">키워드 알림</string>
    <string name="article_list">동네생활 글</string>
    <string name="comment_list">동네생활 댓글</string>
    <string name="category_list">동네생활 주제</string>
    <string name="share_link">당근마켓 공유</string>
    <string name="setting">앱 설정</string>
    <string name="manage_profile">계정/정보 관리</string>
    <string name="logout">로그아웃</string>
    <string name="signout">탈퇴</string>
    <string name="kakao_login_button">Kakao Login Button</string>
    <string name="sign_in_or_sign_up_with_social_service">Sign In/Up</string>
    <string name="sign_in_or_sign_up">로그인/회원가입</string>
    <string name="welcome_to_podomarket">포도마켓에 오신 것을 환영합니다.</string>
    <string name="appbar_profile_activity">프로필</string>
    <string name="appbar_user_info_edit_activity">프로필 설정</string>
    <string name="search_enter_search_term">검색어를 입력하세요.</string>
    <string name="used_trading">중고거래</string>
    <string name="human">사람</string>
    <string name="category">카테고리</string>
    <string name="search_user_title">동네 이웃을 찾고 있나요?</string>
    <string name="search_user_description1">• 닉네임으로 검색해보세요.</string>
    <string name="search_user_description2">• 사용자 프로필의 닉네임 #숫자로도 검색할 수 있어요.</string>
    <string name="search_user_description3">(예: 포동이 #10000)</string>
    <string name="example_city">관악구 봉천동</string>
    <string name="example_user_hash_value">#10000</string>
    <string name="appbar_product_user_buy_activity">구매내역</string>
    <string name="appbar_product_user_sell_activity">판매내역</string>
    <string name="appbar_user_interested_activity">관심목록</string>
    <string name="all">전체</string>
    <string name="product_create_close">닫기</string>
    <string name="product_create_complete">완료</string>
    <string name="product_create_title">글 제목</string>
    <string name="product_create_category">카테고리 선택</string>
    <string name="product_create_price">￦ 가격입력(선택사항)</string>
    <string name="product_create_description">xx동에 올릴 게시글 내용을 작성해주세요.(가품 및 판매 금지품목은 게시가 제한될 수 있어요.)</string>
    <string name="product_create_near_city_number">게시글 보여줄 동네 고르기</string>
    <string name="product_detail_price_proposal">가격 제안하기</string>
    <string name="product_detail_call">전화</string>
    <string name="product_detail_chat">채팅으로 거래하기</string>
    <string name="product_detail_seller_manner">매너온도</string>
    <string name="product_detail_view_more">더보기</string>
    <string name="appbar_create_activity">중고거래 글쓰기</string>
    <string name="example_product_category">생활/가공식</string>
    <string name="example_product_description">동아시에서 제일 맛있는 포도입니다. 한번 맛보면 잊을 수 없는 맛입니다. 사가시면 절대 후회하지 않습니다.</string>
    <string name="example_product_view_number">채팅 10﹒관심 3﹒조회 2,139</string>
    <string name="example_product_user_buy_title">홍길동님의 판매 상품</string>
    <string name="first_photo_number">0/10</string>
    <string name="user_info_edit_description">프로필 사진과 닉네임을 입력해주세요.</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="follow">모아보기</string>
    <string name="get_price_offer">가격제안 받기</string>
    <string name="temperature_description">매너온도는 당근마켓 사용자로부터 받은 칭찬, 후기, 비매너 평가, 운영자 징계 등을 종합하여 만든 매너 지표입니다.</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>