<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/product_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_navigation_product" />
    <item
        android:id="@+id/article_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/bottom_navigation_article" />
    <item
        android:id="@+id/chat_room_list_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/bottom_navigation_chat_room_list" />
    <item
        android:id="@+id/my_page_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_navigation_my_page" />
</menu>