<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.product.ProductCreateActivity">

    <data/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/btn_productCreate_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_create_close"
                android:textColor="@color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_create_location"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/btn_productCreate_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_create_complete"
                android:textColor="@color/black"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                </HorizontalScrollView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_gray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center_vertical">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/product_create_title"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_gray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_create_category"
                        android:textColor="@color/black"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_gray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center_vertical">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_create_price"
                        android:background="@android:color/transparent"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_gray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:id="@+id/et_productCreate_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/product_create_description"
                    android:layout_margin="10dp"/>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/btn_productCreate_nearCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_create_near_city_number"
                android:textColor="@color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

    </LinearLayout>
</layout>